--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "5.0.x",
     "bulma": "^0.9.3",
     "bulma-toast": "^2.4.1",
+    "dayjs": "^1.10.8",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
